--- a/src/app/client/src/app/modules/myassets/components/asset-detail-page/asset-detail-page.component.html
+++ b/src/app/client/src/app/modules/myassets/components/asset-detail-page/asset-detail-page.component.html
@@ -15,10 +15,11 @@
 
                 </div>
                 <div class="col-sm-7 pr-30 res-para">
-                    <p *ngIf="assetDetail?.gradeLevel" class="float-right">Sector :
+                    <p *ngIf="assetDetail?.sector" class="float-right">Sector :
                         <span>
-                            <li *ngFor="let hero of assetDetail?.gradeLevel; let first = first;let last = last">
-                                {{ hero }} <span *ngIf="!last && assetDetail?.gradeLevel.length!=1"> ,</span>
+                            <!-- <li *ngFor="let hero of assetDetail?.sector; let first = first;let last = last"> -->
+                             <li>   {{ assetDetail?.sector }} 
+                                 <!-- <span *ngIf="!last && assetDetail?.sector.length!=1"> ,</span> -->
                             </li>
                         </span>
                     </p>
@@ -45,7 +46,7 @@
                 </div>
             </div>
 
-            <p *ngIf="assetDetail?.board" class="card-text">Asset Type : {{assetDetail?.board}}
+            <p *ngIf="assetDetail?.assetType" class="card-text">Asset Type : {{assetDetail?.assetType}}
             </p>
             <!-- <p class="card-text" *ngIf="assetDetail?.topic">Category : <span>
                     <li *ngFor="let hero of assetDetail?.topic; let first = first;let last = last">
@@ -59,13 +60,13 @@
                 </span>
             </p>
             <p class="card-text" *ngIf="assetDetail?.description">Description : {{assetDetail?.description}}</p>
-            <p class="card-text" *ngIf="assetDetail?.mimeType === 'text/x-url' &&  assetDetail?.link.slice(0,4) === 'http' ">Link: 
-                <a href="{{assetDetail?.link}}" target="_blank">{{assetDetail?.link}} </a>
+            <p class="card-text" *ngIf="assetDetail?.mimeType === 'text/x-url' &&  assetDetail?.source.slice(0,4) === 'http' ">Link: 
+                <a href="{{assetDetail?.source}}" target="_blank">{{assetDetail?.source}} </a>
             </p>
-             <p class="card-text" *ngIf="assetDetail?.mimeType === 'text/x-url' && assetDetail?.link.slice(0,4) !== 'http' ">Link:
-                 <a href="http://{{assetDetail?.link}}" target="_blank">{{assetDetail?.link}} </a>
+             <p class="card-text" *ngIf="assetDetail?.mimeType === 'text/x-url' && assetDetail?.source.slice(0,4) !== 'http' ">Link:
+                 <a href="http://{{assetDetail?.source}}" target="_blank">{{assetDetail?.source}} </a>
             </p>
-            <p class="card-text">Submitted By : {{ assetDetail?.creator }}@{{ assetDetail?.creators }}</p>
+            <p class="card-text">Submitted By : {{ assetDetail?.submittedBy }}@{{ assetDetail?.creators }}</p>
             <p class="card-text" *ngIf="assetDetail?.lastSubmittedOn">Submitted Date : {{assetDetail?.lastSubmittedOn | dateFormat}}</p>
 
 
@@ -119,7 +120,7 @@
                 *ngIf="assetDetail?.creators"></span> | Created By :
             {{assetDetail?.creators}} <span *ngIf="assetDetail?.since"> | Created Year :
                 {{assetDetail?.year}} </span> <span *ngIf="assetDetail?.region"> | Country :
-                {{assetDetail?.region | titlecase}}</span> </p>
+                {{assetDetail?.region }}</span> </p>
         <p class="float-right"></p>
     </div>
 </div>
