--- a/src/app/client/src/app/modules/myassets/components/update-resoure-form/update-resoure-form.component.html
+++ b/src/app/client/src/app/modules/myassets/components/update-resoure-form/update-resoure-form.component.html
@@ -17,18 +17,19 @@
 
       </div>
     </div>
-    <div *ngIf="field.inputType==='text' && field.code==='link' && formInputData[field.code]" class="required field"
+    <div *ngIf="field.inputType==='text' && field.code==='link' && formInputData['source']" class="required field"
       [ngClass]="{ 'disabled':!field.editable}">
 
       <div class="field required">
         <label>
           {{field.name}}
         </label>
-        <input name={{field.code}} type={{field.inputType}} [(ngModel)]="formInputData[field.code]" id="style"
+        <input name={{field.code}} type={{field.inputType}} [(ngModel)]="formInputData['source']" id="style"
           placeholder={{field.placeholder}}>
 
       </div>
     </div>
+    
     <div *ngIf="field.inputType==='text' && field.code==='creators'" class="required field"
       [ngClass]="{ 'disabled':!field.editable}">
 
@@ -54,18 +55,18 @@
       </div>
     </div> -->
     <div *ngIf="field.code!='year' && field.code==='region'" class="field required"
-      [ngClass]="{ 'disabled':!field.editable}">
-      <!-- <label>{{field.name}}</label> -->
-      <div class="required field">
-        <label>
-          {{field.name}}
+    [ngClass]="{ 'disabled':!field.editable}">
+    <!-- <label>{{field.name}}</label> -->
+    <div class="required field">
+      <label>
+        {{field.name}}
 
-        </label>
-        <sui-select id={{field.code}} name={{field.code}} class="selection" [(ngModel)]="formInputData[field.code]"
-          (ngModelChange)="updateForm({index:i, field:field, value:formInputData[field.code]})"
-          [placeholder]="'Select'" [isSearchable]=true #searchSelect placeholder="Choose">
-          <sui-select-option *ngFor="let option of countryList" [value]="option"></sui-select-option>
-        </sui-select>
+      </label>
+      <sui-select id={{field.code}} name={{field.code}} class="selection" [(ngModel)]="formInputData['region']"
+        (ngModelChange)="updateForm({index:i, field:field, value:formInputData['region']})"
+        [placeholder]="formInputData['region']" [isSearchable]=true #searchSelect placeholder="Choose">
+        <sui-select-option *ngFor="let option of countryList" [value]="option"></sui-select-option>
+      </sui-select>
         <!-- <hr>
         <select id={{field.code}} name={{field.code}} class="ui selection dropdown" [value]="formInputData[field.code]"
           [(ngModel)]="formInputData[field.code]" (ngModelChange)="updateForm({index:i, field:field, value:formInputData[field.code]})" placeholder="select">
@@ -119,8 +120,8 @@
         <label>
           {{field.name}}
         </label>
-        <sui-select id={{field.code}} name={{field.code}} class="selection" [(ngModel)]="formInputData[field.code]"
-          (ngModelChange)="updateForm({index:i, field:field, value:formInputData[field.code]})">
+        <sui-select id={{field.code}} name={{field.code}} class="selection" [(ngModel)]="formInputData['assetType']"
+          (ngModelChange)="updateForm({index:i, field:field, value:formInputData['assetType']})">
           <sui-select-option *ngFor="let option of categoryList[field.code]" [value]="option.name"></sui-select-option>
         </sui-select>
       </div>
@@ -129,8 +130,8 @@
       <label>{{field.name}}</label>
       <div class="required field">
         <sui-multi-select id={{field.code}} name={{field.code}} class="selection"
-          [(ngModel)]="formInputData[field.code]"
-          (ngModelChange)="updateForm({index:i, field:field, value:formInputData[field.code]})" #multiSelect>
+          [(ngModel)]="formInputData['language']"
+          (ngModelChange)="updateForm({index:i, field:field, value:formInputData['language']})" #multiSelect>
           <sui-select-option *ngFor="let option of categoryList[field.code]" [value]="option"> </sui-select-option>
         </sui-multi-select>
       </div>
@@ -147,7 +148,7 @@
       <label>{{field.name}}</label>
       <form class="conceptSelector ui form">
 
-        <app-concept-picker *ngIf="formInputData[field.code]" [selectedConcepts]="formInputData[field.code]"
+        <app-concept-picker *ngIf="formInputData['sector']" [selectedConcepts]="formInputData['sector']"
           [categoryName]="field.name" [category]="categoryList[field.code]"
           [conceptPickerClass]="'content-creation-concept-picker'" (Concepts)="concepts($event)"></app-concept-picker>
       </form>
