--- a/src/app/client/src/app/modules/resource/components/shared-detail-page/shared-detail-page.component.html
+++ b/src/app/client/src/app/modules/resource/components/shared-detail-page/shared-detail-page.component.html
@@ -16,10 +16,11 @@
 
                 </div>
                 <div class="col-sm-7 pr-30">
-                    <p *ngIf="assetDetail?.gradeLevel" class="float-right" id="res-para">Sector :
+                    <p *ngIf="assetDetail?.sector" class="float-right" id="res-para">Sector :
                         <span>
-                            <li *ngFor="let hero of assetDetail?.gradeLevel; let first = first;let last = last">
-                                {{ hero }}<span *ngIf="!last && assetDetail?.gradeLevel.length!=1">,</span>
+                            <!-- <li *ngFor="let hero of assetDetail?.sector; let first = first;let last = last"> -->
+                               <li> {{ assetDetail?.sector }}
+                                <!-- <span *ngIf="!last && assetDetail?.sector.length!=1">,</span> -->
                             </li>
                         </span>
                     </p>
@@ -45,7 +46,7 @@
                     </div>
                 </div>
             </div>
-            <p *ngIf="assetDetail?.board" class="card-text">Asset Type : {{assetDetail?.board}}
+            <p *ngIf="assetDetail?.assetType" class="card-text">Asset Type : {{assetDetail?.assetType}}
             </p>
             <!-- <p class="card-text" *ngIf="assetDetail?.topic">Category : <span>
                     <li *ngFor="let hero of assetDetail?.topic; let first = first;let last = last">
@@ -59,10 +60,10 @@
                 </span>
             </p>
             <p class="card-text" *ngIf="assetDetail?.description">Description : {{assetDetail?.description}}</p>
-            <p class="card-text" *ngIf="assetDetail?.link && assetDetail?.mimeType === 'text/x-url'">Link: <a
-                    href="{{assetDetail?.link}}" target="_blank">{{assetDetail?.link}} </a></p>
-                    <p class="card-text">Submitted By : {{ assetDetail?.creator }}@{{ assetDetail?.creators }}</p>
-                    <p class="card-text">Submitted Date : {{assetDetail?.lastSubmittedOn | dateFormat}}</p>
+            <p class="card-text" *ngIf="assetDetail?.source && assetDetail?.mimeType === 'text/x-url'">Link: <a
+                    href="{{assetDetail?.source}}" target="_blank">{{assetDetail?.source}} </a></p>
+                    <p class="card-text">Submitted By : {{ assetDetail?.submittedBy }}@{{ assetDetail?.creators }}</p>
+                    <p class="card-text" *ngIf="assetDetail?.lastSubmittedOn">Submitted Date : {{assetDetail?.lastSubmittedOn | dateFormat}}</p>
             <div *ngIf="assetDetail?.artifactUrl && assetDetail?.mimeType === 'application/pdf'">
                 <p>
                     File : <span (click)="navigateToPlayer()" class="pdfStyle">{{pdfs | titlecase  | slice: 1}}pdf</span>
@@ -97,7 +98,7 @@
                     *ngIf="assetDetail?.creators"></span> | Created By :
                 {{assetDetail?.creators}} <span *ngIf="assetDetail?.since"> | Created Year :
                     {{assetDetail?.year}} </span> <span *ngIf="assetDetail?.region"> | Country :
-                    {{assetDetail?.region | titlecase}}</span> </p>
+                    {{assetDetail?.region }}</span> </p>
             <p class="float-right"></p>
         </div>
     </div>
