Tenant title changes

--- a/src/app/tenant/space/index.html
+++ b/src/app/tenant/space/index.html
@@ -16,7 +16,7 @@
 	<!-- <link rel="manifest" href="images/favicons/manifest.json"> -->
 	<meta name="theme-color" content="#ffffff">
 
-	<title>Societal Platform</title>
+	<title>SPace</title>
 
 	<!-- Og Tags -->
 	<meta property="og:title" content="Sunbird" />
