--- a/src/app/client/src/assets/styles/components/_filters.scss
+++ b/src/app/client/src/assets/styles/components/_filters.scss
@@ -1,132 +1,180 @@
-.sb-prominent-filter {
-  background: $sb-prominent-filter-background-color;
-  padding: 8px 0px 0px 0px;
-
-  .sb-prominent-filter-header {
-    font-weight: $sb-prominent-filter-header-font-weight;
-    margin: $sb-prominent-filter-header-margin;
+.data-driven-filter,
+.prominent-filter {
+  .prominent-filter-heading {
+    font-weight: bold;
+    font-size: 16px;
   }
 
-  .sb-data-driven-filter-header {
-    font-weight: $sb-prominent-filter-header-font-weight;
-    color: $sb-prominent-filter-header-color;
+  .filter-title {
+    color: $primary-color;
   }
 
-  .sb-prominent-filter-container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: flex-start;
+  .field {
+    width: 100%;
+    max-width: 100%;
 
-    .sb-prominent-filter-field {
-      margin: 0 0 $sb-prominent-filter-field-bottom-spacing 0;
-      padding: 0 $sb-prominent-filter-field-side-spacing 0 0;
-      width: $sb-prominent-filter-field-width-above-lg;
+    // @media screen and (min-width: 768px) {
+    //   max-width: 180px;
+    // }
+    label {
+      font-size: 13px;
+    }
+  }
 
-      &:last-child {
-        margin-top: auto;
-        margin-left: auto;
-        text-align: right;
-        padding-right: 0;
+  .ui.selection.dropdown {
+    width: 100%;
+    max-width: 100%;
+    min-width: 100%;
+
+    .dropdown.icon {
+      padding: 10px 7px;
+    }
+
+    .menu>.item {
+      padding: 9px 7px !important;
+      color: #4a4a4a !important;
+      font-size: 13px !important;
+      line-height: 1.4;
+
+      &.active {
+        color: $primary-color !important;
+        font-weight: bold;
       }
+    }
+  }
 
-      label {
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-        margin: $sb-prominent-filter-field-label-margin;
-        font-weight: $sb-prominent-filter-field-label-font-weight;
-        font-size: $sb-prominent-filter-field-label-font-size;
-        color: $sb-prominent-filter-field-label-color;
+  .ui.multiple.dropdown {
+    font-size: 13px;
+    color: #4a4a4a;
+    height: ($base-block-space * 4) + 1;
+    border-radius: ($base-block-space - 5);
+
+    .text {
+      text-transform: lowercase;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      line-height: 1.5;
+      margin: 5px;
+
+      &::first-letter {
+        text-transform: uppercase;
       }
+    }
 
-      .topic-picker-selector {
-        font-size: $sb-prominent-filter-field-font-size;
-        color: $sb-prominent-filter-field-color;
-        border: $sb-prominent-filter-field-border;
-        border-radius: $sb-prominent-filter-field-border-radius;
-        width: $sb-prominent-filter-field-width;
-        height: $sb-prominent-filter-field-height;
-        padding: $sb-prominent-filter-field-input-padding;
-      }
+    &.active.visible {
+      background: #fff;
+    }
+  }
 
-      .ui.selection.dropdown {
-        min-width: $sb-prominent-filter-field-width;
-        width: $sb-prominent-filter-field-width;
-        height: $sb-prominent-filter-field-height;
-        font-size: $sb-prominent-filter-field-font-size;
-        border-radius: $sb-prominent-filter-field-border-radius;
-        padding: 0;
-        .divider{
-          margin: 0;
-        }
-        .item {
-          display: flex;
-          flex-direction: row;
-          align-items: center;
-          width: $sb-prominent-filter-field-width;
-          padding: $sb-prominent-filter-dropdown-font-size;
-          color: $sb-prominent-filter-field-color;
-          font-size: $sb-prominent-filter-field-font-size;
+  .ui.button {
+    font-size: 14px;
+    text-transform: lowercase;
+    padding: 9.5px 15px;
 
-          &.header {
-            margin: 0;
-            font-weight: $sb-prominent-filter-dropdown-header-font-weight;
-          }
+    &::first-letter {
+      text-transform: uppercase;
+    }
+  }
 
-          &.active {
-            color: $sb-prominent-filter-dropdown-item-active-color;
-            font-weight: $sb-prominent-filter-dropdown-item-active-font-weight;
-          }
-          &:hover{
-            background: $primary-250;
-            color: $blue;
-          }
-          i.icon.square.outline{
-            height: ($base-block-space * 2);
-            width:  ($base-block-space * 2);
-            border: 1px solid $primary-300;
-            border-radius: 5px;
-            &::before{
-              content: "\f14a";
-              visibility: hidden;
-            }
-            &.check{
-              background: $blue;
-              border: none;
-              color: $sb-prominent-filter-background-color;
-              &::before{
-                content: "\2713";
-                line-height: ($base-block-space * 2);
-                visibility: visible;
-              }
-            }
-          }
-        }
+  .topic-picker-selector {
+    font-size: 13px !important;
+    color: #4a4a4a !important;
+    border-color: #e4e4e4 !important;
+  }
 
-        .text {
-          text-transform: lowercase;
-          text-overflow: ellipsis;
-          overflow: hidden;
-          color: $sb-prominent-filter-field-color;
-          margin: 0;
-          padding: $sb-prominent-filter-field-input-padding;
-          font-size: $sb-prominent-filter-field-font-size;
-          &::first-letter {
-            text-transform: uppercase;
-          }
-        }
-      }
+  .ui.dropdown .menu>.header {
+    font-weight: 500 !important;
+    margin: 7px 0 7px 5px !important;
 
+    .blue-text-color-sunbird {
+      font-weight: 600;
     }
   }
 }
 
-// responsive
+.prominent-filter .topic-picker-selector {
+  border: 1px solid #e4e4e4 !important;
+  border-radius: 5px !important;
+}
+
+@media screen and (max-width: 768px) {
+  .ui.grid>.wide.column.mobile-p-0 {
+    padding: 0 !important;
+  }
+}
+
+.computer-only {
+  display: none !important;
+
+  @media screen and (min-width: 992px) {
+    display: block !important;
+  }
+}
+
+.popup-content .data-driven-filter,
+.workspacesegment {
+  @media screen and (min-width: 992px) {
+    .ten.wide.computer {
+      width: 75% !important;
+    }
+
+    .two.wide.computer {
+      width: 25% !important;
+    }
+
+    .three.wide.computer {
+      width: 33.33% !important;
+    }
+  }
+}
+
+.searchicon.ui.icon.input input.upForReviewSearchBox {
+  border-radius: 0;
+}
+
+.sb-prominent-filter-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+
+  .sb-prominent-filter-field {
+    margin: 0;
+    margin-bottom: $base-block-space*2;
+    padding-right: $base-block-space*2;
+    width: 20%;
+
+    &:last-child {
+      margin-top: auto;
+      margin-left: auto;
+      text-align: right;
+      padding-right: 0;
+    }
+
+    label {
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      color: $gray-800;
+      font-weight: normal;
+    }
+  }
+}
+
+*[dir="rtl"] {
+
+  .data-driven-filter .ui.selection.dropdown .dropdown.icon,
+  .prominent-filter .ui.selection.dropdown .dropdown.icon {
+    padding: 4px 0px;
+  }
+}
+
+
+// responsive   
 
 @include respond-above(lg) {
-  .sb-prominent-filter .sb-prominent-filter-container .sb-prominent-filter-field {
-    width: $sb-prominent-filter-field-width-above-lg;
+  .sb-prominent-filter-container .sb-prominent-filter-field {
+    width: 20%;
 
     &:nth-child(5n+5) {
       padding-right: 0;
@@ -134,26 +182,25 @@
   }
 
   *[dir="rtl"] {
-    .sb-prominent-filter .sb-prominent-filter-container .sb-prominent-filter-field{
-      &:nth-child(5n+5) {
-        padding-right: $sb-prominent-filter-field-side-spacing;
-      }
-      &:nth-child(5n+1) {
-        padding-right: 0;
-      }
-      &:last-child {
-        padding-right: $sb-prominent-filter-field-side-spacing;
-        margin-right: auto;
-        margin-left: 0;
-        text-align: left;
-      }
+    .sb-prominent-filter-container .sb-prominent-filter-field:nth-child(5n+5) {
+      padding-right: 16px;
+    }
+
+    .sb-prominent-filter-container .sb-prominent-filter-field:nth-child(5n+1) {
+      padding-right: 0;
+    }
+
+    .sb-prominent-filter-container .sb-prominent-filter-field:last-child {
+      padding-right: 16px;
+      margin-right: auto;margin-left:0px;
+      text-align: left;
     }
   }
 }
 
 @include respond-between(md, lg) {
-  .sb-prominent-filter .sb-prominent-filter-container .sb-prominent-filter-field {
-    width: $sb-prominent-filter-field-width-above-md;
+  .sb-prominent-filter-container .sb-prominent-filter-field {
+    width: 25%;
 
     &:nth-child(4n+4) {
       padding-right: 0;
@@ -161,26 +208,29 @@
   }
 
   *[dir="rtl"] {
-    .sb-prominent-filter .sb-prominent-filter-container .sb-prominent-filter-field {
+    .sb-prominent-filter-container .sb-prominent-filter-field {
       &:nth-child(4n+4) {
-        padding-right: $sb-prominent-filter-field-side-spacing;
-      }
-      &:nth-child(4n+1) {
-        padding-right: 0;
-      }
-      &:last-child {
-        padding-right: $sb-prominent-filter-field-side-spacing;
-        margin-right: auto;
-        margin-left: 0;
-        text-align: left;
+        padding-right: 16px;
       }
     }
+
+    .sb-prominent-filter-container .sb-prominent-filter-field:nth-child(4n+1) {
+      padding-right: 0;
+    }
+
+    .sb-prominent-filter-container .sb-prominent-filter-field:last-child {
+      padding-right: 16px;
+      margin-right: auto;    margin-left: 0;
+      text-align: left;
+    }
   }
+
 }
 
+
 @include respond-between(sm, md) {
-  .sb-prominent-filter .sb-prominent-filter-container .sb-prominent-filter-field {
-    width: $sb-prominent-filter-field-width-above-sm;
+  .sb-prominent-filter-container .sb-prominent-filter-field {
+    width: 33.3333%;
 
     &:nth-child(3n+3) {
       padding-right: 0;
@@ -188,26 +238,30 @@
   }
 
   *[dir="rtl"] {
-    .sb-prominent-filter .sb-prominent-filter-container .sb-prominent-filter-field {
+    .sb-prominent-filter-container .sb-prominent-filter-field {
       &:nth-child(3n+3) {
-        padding-right: $sb-prominent-filter-field-side-spacing;
-      }
-      &:nth-child(3n+1) {
-        padding-right: 0;
-      }
-      &:last-child {
-        padding-right: $sb-prominent-filter-field-side-spacing;
-        margin-right: auto;
-        margin-left: 0;
-        text-align: left;
+        padding-right: 16px;
       }
     }
+
+    .sb-prominent-filter-container .sb-prominent-filter-field:nth-child(3n+1) {
+      padding-right: 0;
+    }
+
+    .sb-prominent-filter-container .sb-prominent-filter-field:last-child {
+      padding-right: 16px;
+      margin-right: auto;    margin-left: 0;
+      text-align: left;
+    }
   }
+
+
 }
 
+
 @include respond-below(sm) {
-  .sb-prominent-filter .sb-prominent-filter-container .sb-prominent-filter-field {
-    width: $sb-prominent-filter-field-width-below-sm;
+  .sb-prominent-filter-container .sb-prominent-filter-field {
+    width: 50%;
 
     &:nth-child(2n+2) {
       padding-right: 0;
@@ -215,19 +269,21 @@
   }
 
   *[dir="rtl"] {
-    .sb-prominent-filter .sb-prominent-filter-container .sb-prominent-filter-field {
+    .sb-prominent-filter-container .sb-prominent-filter-field {
       &:nth-child(2n+2) {
-        padding-right: $sb-prominent-filter-field-side-spacing;
-      }
-      &:nth-child(2n+1) {
-        padding-right: 0;
-      }
-      &:last-child {
-        padding-right: $sb-prominent-filter-field-side-spacing;
-        margin-right: auto;
-        margin-left: 0;
-        text-align: left;
+        padding-right: 16px;
       }
     }
+
+    .sb-prominent-filter-container .sb-prominent-filter-field:nth-child(2n+1) {
+      padding-right: 0;
+    }
+
+    .sb-prominent-filter-container .sb-prominent-filter-field:last-child {
+      padding-right: 16px;
+      margin-right: auto;    margin-left: 0;
+      text-align: left;
+    }
   }
+
 }
