--- a/src/app/client/src/app/modules/core/components/sunbird-prominent-filter/sunbird-prominent-filter.component.scss
+++ b/src/app/client/src/app/modules/core/components/sunbird-prominent-filter/sunbird-prominent-filter.component.scss
@@ -14,3 +14,15 @@
 .primary {
     color: #1185bf;
 }
+
+.sb-prominent-filter-container.abc {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+}
+.sb-prominent-filter-field.abcd{
+    margin: 0 0 16px 0;
+    padding: 0 16px 0 0;
+    width: 20%;
+}
