--- a/src/app/client/src/assets/styles/styles.scss
+++ b/src/app/client/src/assets/styles/styles.scss
@@ -27,6 +27,11 @@
 @import "./components/components";
 @import "./legacy";
 @import "./global";
+@import "./components/filters";
+@import "./base/base";
+@import "./pages/pages";
+@import "./utilities/utilities";
+
 .ui.grid>.column:not(.row) {
   padding-top: 16px;
   padding-bottom: 16px;
