--- a/src/app/client/src/app/modules/shared-feature/components/profile-framework-popup/profile-framework-popup.component.html
+++ b/src/app/client/src/app/modules/shared-feature/components/profile-framework-popup/profile-framework-popup.component.html
@@ -1,4 +1,4 @@
-<!-- <sui-modal
+<sui-modal
   [mustScroll]="false" 
   [isClosable]="isClosable"
   [transitionDuration]="0"
@@ -51,4 +51,4 @@
   </div>
 
   
-</sui-modal> -->
+</sui-modal>
