space button issues fixed

--- a/src/app/client/src/app/modules/core/components/space-data-driven-filter/space-data-driven-filter.component.scss
+++ b/src/app/client/src/app/modules/core/components/space-data-driven-filter/space-data-driven-filter.component.scss
@@ -22,7 +22,7 @@
     border: none;
     width: fit-content;
     border-radius: 5px;
-    height: 40px;
+    // height: 40px;
     font-family: "Muli",sans-serif;
     font-size: 15px;
     text-transform: uppercase;
