--- a/src/app/client/src/app/modules/core/components/space-prominent-filter/space-prominent-filter.component.scss
+++ b/src/app/client/src/app/modules/core/components/space-prominent-filter/space-prominent-filter.component.scss
@@ -4,7 +4,7 @@
     border: none;
     width: fit-content;
     border-radius: 5px;
-    height: 40px;
+    // height: 40px;
     font-family: "Muli",sans-serif;
     font-size: 15px;
     text-transform: uppercase;
