css bugs fixes and selector selected fixed

--- a/src/app/client/src/app/modules/core/components/space-data-driven-filter/space-data-driven-filter.component.scss
+++ b/src/app/client/src/app/modules/core/components/space-data-driven-filter/space-data-driven-filter.component.scss
@@ -43,3 +43,11 @@
         width: 25% !important;
     }
 }
+.searchfilterbutton
+{
+    font-size: 0.94rem !important;
+}
+.filter-button
+{
+    padding-top: 6px;
+}
