--- a/src/app/client/src/app/modules/myassets/components/myassest-page/myassest-page.component.html
+++ b/src/app/client/src/app/modules/myassets/components/myassest-page/myassest-page.component.html
@@ -7,7 +7,7 @@
         Asset</button>
     </div>
   </div>
-  <div *ngIf="(allContent.length === 0 && !noResult && !showLoader) || noResultsForReview === true">
+  <div *ngIf="(noResult && !showLoader) || noResultsForReview === true">
       <app-no-result [data]="noResultMessage"></app-no-result>
     </div>
   <div class="row" *ngIf="allContent.length > 0 && !showLoader && !noResult">
