--- a/src/app/client/src/assets/styles/semantic/semantic-overrides.scss
+++ b/src/app/client/src/assets/styles/semantic/semantic-overrides.scss
@@ -91,3 +91,7 @@ input[type=number]::-webkit-outer-spin-button {
     padding-right: 16px !important;
   }
 }
+
+.ui.search.dropdown>.text {
+  top:5px;
+}
